# STACK-Land-Acquisition

./: .env.example  .gitignore  BERGEN_SCALE_UP.md  CLAUDE.md  HOT_FILES  MIGRATION_RESERVATIONS.md  NJ_STATEWIDE_SOURCES.md  ORPHAN_BRANCH_AUDIT.md  PHASE_5_6_SOURCES.md  README.md  STATUS.md  docker-compose.override.yml.example  docker-compose.yml  fly.toml  jobs.json  juris.json  listings_lehi.json  search_lehi.json  vercel.json
backend/: .env.example  Dockerfile  Procfile  alembic.ini  check_import.py  fly.toml  pyproject.toml  railway-cron.toml  railway.toml  repair_dedup_jurisdictions.py  repair_job_cache.py  run_kmz_import.py
backend/alembic/: env.py
backend/app/: config.py  db.py  main.py  version.py  worker.py
backend/data/: README.md  _billerica_parse_input.txt  allegheny_pa_zoning_directory.json  bergen_zoning_directory.json  burlington_zoning_directory.json  contra_costa_ca_zoning_directory.json  essex_zoning_directory.json  hennepin_mn_zoning_directory.json  king_wa_zoning_directory.json  kitsap_wa_zoning_directory.json  maricopa_az_zoning_directory.json  middlesex_nj_zoning_directory.json  monmouth_zoning_directory.json  nj_mun_code_map.json  nj_municipalities.json  pierce_wa_zoning_directory.json  snohomish_wa_zoning_directory.json  westchester_zoning_directory.json  zoning_source_tenants.json
backend/docs/: discipline_catch_ledger.md  zone_matrix_write_contract.md
backend/outputs/: _exceptions_B.md  _exceptions_C.md  _exceptions_D.md  _exceptions_bellevue_belred_B.md  _exceptions_lakeoswego_B.md  _exceptions_phoenix_B.md  _exceptions_seattle_B.md  _exceptions_slco_human_review_B.md  _exceptions_whiteplains_resort_B.md  _verdict_audit_2026_07_15.md
backend/scripts/: _api.py  _apply_apex_nc.py  _apply_atlanta_buckhead_ga.py  _apply_batch3_coastal.py  _apply_batch4_somerset.py  _apply_bedford_verdicts.py  _apply_bedminster.py  _apply_bellevue_belred.py  _apply_bellevue_wa.py  _apply_bergen_batch1_final.py  _apply_boonton_town_verdicts.py  _apply_brentwood_tn.py  _apply_bridgeport_verdicts.py  _apply_buckingham_township_bucks.py  _apply_cary_nc.py  _apply_charlotte_nc.py  _apply_cherry_hills_co.py  _apply_chester_pa_batch1.py  _apply_chester_pa_batch2.py  _apply_chester_pa_batch3.py  _apply_conshohocken_verdicts.py  _apply_contra_costa_ca_batch1.py  _apply_contra_costa_east_county.py  _apply_croton_verdicts.py  _apply_darien_ct.py  _apply_delaware_pa_chadds_ford.py  _apply_delaware_pa_chester_heights.py  _apply_delaware_pa_concord.py  _apply_delaware_pa_edgmont.py  _apply_delaware_pa_haverford.py  _apply_delaware_pa_marple.py  _apply_delaware_pa_middletown.py  _apply_delaware_pa_newtown.py  _apply_delaware_pa_radnor.py  _apply_delaware_pa_thornbury.py  _apply_denver_co_south.py  _apply_denville_verdicts.py  _apply_dobbs_ferry_verdicts.py  _apply_doylestown_borough_bucks.py  _apply_doylestown_township_bucks.py  (+392 more)
backend/tests/: conftest.py  test_acreage_curve.py  test_address_normalizer.py  test_admin_auth.py  test_admin_coverage_refresh.py  test_admin_op5_adjudications.py  test_admin_op5_matrix.py  test_admin_op5_uncovered.py  test_apply_verdicts.py  test_audit_zoning_coverage_scoping.py  test_bluffdale_classifier.py  test_buybox_overlay_ss.py  test_buybox_scoring_wealth.py  test_census_tract_coverage.py  test_classification.py  test_coverage_count_db.py  test_draper_e2e.py  test_factory_safe_write.py  test_feasibility_zoning_system.py  test_field_binding.py  test_health.py  test_heuristic_gate_db.py  test_job_resolver_same_name_state.py  test_job_tracking.py  test_job_watchdog_stale_cutoff.py  test_jobs_jurisdiction_match.py  test_jurisdiction_match.py  test_lane_aware_scoring.py  test_lir_has_structure_mapping.py  test_mapbox_isochrone.py  test_match_listings_worker_endpoint.py  test_municipality_health.py  test_municipality_normalize.py  test_municipality_remediation.py  test_nj_municipal_discovery_concurrency.py  test_op5_arcgis_path.py  test_op5_discovery_classify.py  test_op5_per_muni_runner.py  test_ordinance_fetcher_fallback.py  test_ordinance_parser_evals.py  (+29 more)
backend/tmp/: audit_may31_close.json  audit_post_middlesex_ma_batch2.json  audit_post_truthfulness.json  job_fairfield_30997930.json  job_monomouth_08b0f866.json  job_monomouth_a9515ff6.json  job_nassau_3c7ce534.json  job_nassau_7cda9f3e.json  job_nassau_80120217.json  job_nassau_91bb9444.json  job_nassau_91bb9444_latest.json  job_nassau_d98324cc.json  job_westchester_886141e2.json  jobs_all_latest.json  jobs_cancelled_2026-05-26.json  jobs_failed_2026-05-26.json  jobs_ready_2026-05-26.json
(+718 files in other folders)
