[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zoning-finder-backend"
version = "0.1.0"
description = "Zoning-aware vacant parcel finder — FastAPI backend"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "geoalchemy2>=0.15.0",

    # Pydantic / settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # HTTP
    "httpx>=0.27.0",
    "aiofiles>=23.2.1",

    # Geo
    "shapely>=2.0.4",
    "geopandas>=0.14.4",
    "rasterstats>=0.19.0",

    # AI
    "anthropic>=0.28.0",

    # PDF parsing
    "pypdf>=4.2.0",
    "pdfplumber>=0.11.2",

    # HTML / web scraping (for Municode / eCode360)
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.1",
    "anyio>=4.4.0",
    "httpx>=0.27.0",
    "respx>=0.21.1",
]

# Playwright (used only in arcgis_discovery service — heavy dep, install separately)
# pip install playwright && playwright install chromium
discovery = [
    "playwright>=1.44.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: tests that require a live database and external services",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py312"
