[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zoning-finder-backend"
version = "0.1.0"
description = "Zoning-aware vacant parcel finder — FastAPI backend"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0,<0.30.0",
    "psycopg2-binary>=2.9.9",
    "geoalchemy2>=0.15.0",

    # Pydantic / settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # HTTP
    "httpx>=0.27.0",
    "aiofiles>=23.2.1",
    "dramatiq[redis]>=1.17.0",

    # Process supervision — uvicorn + dramatiq run under honcho so either process
    # dying kills the container (Railway then restarts). Avoids silent worker
    # outages.
    "honcho>=2.0.0",

    # Geo
    "shapely>=2.0.4",
    "geopandas>=0.14.4",
    "rasterstats>=0.19.0",
    "pyproj>=3.6.0",
    "fastkml>=0.12.0",

    # AI
    "anthropic>=0.28.0",

    # PDF parsing
    "pypdf>=4.2.0",
    "pdfplumber>=0.11.2",

    # HTML / web scraping (for Municode / eCode360 / municipal.codes)
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",

    # Browser automation — required for JS-rendered ordinance sources
    # (municipal.codes, Municode React SPA, Cloudflare-protected sites).
    # After install: playwright install chromium
    "playwright>=1.44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.1",
    "anyio>=4.4.0",
    "httpx>=0.27.0",
    "respx>=0.21.1",
]

# Playwright is now a main dependency — see above.
# The discovery extra is kept for backwards compatibility.
discovery = []

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Session-scoped async fixtures (e.g., db_engine in tests/conftest.py) require
# the default fixture loop scope to also be session; pytest-asyncio 1.x
# defaults to function and raises "attached to a different loop".
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: tests that require a live database and external services",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py312"
